Bug 1720205 [wpt PR 29641] - bluetooth: Mark requestDevice/cross-origin-iframe.sub.https.html flaky, a=testonly
Automatic update from web-platform-tests
bluetooth: Mark requestDevice/cross-origin-iframe.sub.https.html flaky

This change fixes up requestDevice/cross-origin-iframe.sub.https.html so
that it will fail rather than time out when the iframe reports an
unexpected response and marks the test flaky until issue 1066891 is
resolved.

Bug: 1227710
Change-Id: Iec2082dd617caff39c9b424ff856cf875379ecda
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3021754
Commit-Queue: Reilly Grant <reillygchromium.org>
Auto-Submit: Reilly Grant <reillygchromium.org>
Reviewed-by: Chris Mumford <cmumfordgoogle.com>
Cr-Commit-Position: refs/heads/master{#900759}

--

wpt-commits: aac96012eda81520a0bbf5cb37d0d058ebfbe291
wpt-pr: 29641

UltraBlame original commit: af8a7029fc6dbdb849ae96d68613bb998af5bfa0

--- a/testing/web-platform/tests/bluetooth/requestDevice/cross-origin-iframe.sub.https.html
+++ b/testing/web-platform/tests/bluetooth/requestDevice/cross-origin-iframe.sub.https.html
@@ -207,13 +207,18 @@ iframe
 ;
 bluetooth_test
 (
+async
 (
+t
 )
 =
 >
+{
+await
 setUpHealthThermometerDevice
 (
 )
+;
 /
 /
 1
@@ -222,20 +227,21 @@ Load
 the
 iframe
 .
-.
-then
-(
-(
-)
+const
+iframeWatcher
 =
->
 new
-Promise
+EventWatcher
 (
-resolve
-=
->
-{
+t
+iframe
+[
+'
+load
+'
+]
+)
+;
 iframe
 .
 src
@@ -251,19 +257,16 @@ appendChild
 iframe
 )
 ;
-iframe
+await
+iframeWatcher
 .
-addEventListener
+wait_for
 (
 '
 load
 '
-resolve
 )
 ;
-}
-)
-)
 /
 /
 2
@@ -275,20 +278,21 @@ from
 the
 iframe
 .
-.
-then
-(
-(
-)
+const
+windowWatcher
 =
->
 new
-Promise
+EventWatcher
 (
-resolve
-=
->
-{
+t
+window
+[
+'
+message
+'
+]
+)
+;
 iframe
 .
 contentWindow
@@ -307,14 +311,19 @@ RequestDevice
 '
 )
 ;
-window
-.
-onmessage
-=
+const
 messageEvent
 =
->
-{
+await
+windowWatcher
+.
+wait_for
+(
+'
+message
+'
+)
+;
 assert_equals
 (
 messageEvent
@@ -326,9 +335,6 @@ SecurityError
 requestDevice
 (
 )
-'
-+
-'
 called
 from
 cross
@@ -339,14 +345,7 @@ iframe
 '
 )
 ;
-resolve
-(
-)
-;
 }
-}
-)
-)
 test_desc
 )
 ;
