Bug 1719633 [wpt PR 29607] - [Sanitizer API] Remove .sanitizeToString., a=testonly
Automatic update from web-platform-tests
[Sanitizer API] Remove .sanitizeToString.

Remove .sanitizeToString and string inputs to .sanitize.
Remove tests for .sanitizeToString.
Adapt tests, that sometimes used .sanitizeToString as a generic
sanitizer method.

Bug: 1221153
Change-Id: I33723ffe9e5a7cd8dd45b655efe31e7436d0eff2
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2988762
Commit-Queue: Daniel Vogelheim <vogelheimchromium.org>
Reviewed-by: Yifan Luo <lyfchromium.org>
Cr-Commit-Position: refs/heads/master{#900979}

--

wpt-commits: 2a570cfa1f41bf3f40cd967cf45620b157b65c8b
wpt-pr: 29607

UltraBlame original commit: 30b44dbbce0ec26695f9b11292320ece4777fdbb

--- a/testing/web-platform/tests/sanitizer-api/sanitizer-config.https.tentative.html
+++ b/testing/web-platform/tests/sanitizer-api/sanitizer-config.https.tentative.html
@@ -330,8 +330,21 @@ the
 options
 .
 )
-const
+/
+/
+The
 probe
+determines
+whether
+the
+Sanitizer
+modifies
+the
+probe
+string
+.
+const
+probe_string
 =
 "
 <
@@ -358,6 +371,29 @@ test
 p
 >
 "
+;
+const
+probe
+=
+sanitizer
+=
+>
+(
+probe_string
+=
+=
+sanitizer
+.
+sanitizeFor
+(
+"
+div
+"
+probe_string
+)
+.
+innerHTML
+)
 ;
 const
 should_stay_the_same
@@ -538,15 +574,12 @@ instanceof
 Sanitizer
 )
 ;
-assert_equals
+assert_true
+(
+probe
 (
 s
-.
-sanitizeToString
-(
-probe
 )
-probe
 )
 ;
 }
@@ -599,15 +632,12 @@ instanceof
 Sanitizer
 )
 ;
-assert_not_equals
+assert_false
+(
+probe
 (
 s
-.
-sanitizeToString
-(
-probe
 )
-probe
 )
 ;
 }
@@ -638,15 +668,12 @@ t
 =
 >
 {
-assert_not_equals
+assert_false
+(
+probe
 (
 s
-.
-sanitizeToString
-(
-probe
 )
-probe
 )
 ;
 }
