--- a/testing/web-platform/tests/sanitizer-api/sanitizer-sanitize.https.tentative.html
+++ b/testing/web-platform/tests/sanitizer-api/sanitizer-sanitize.https.tentative.html
@@ -280,44 +280,30 @@ s
 new
 Sanitizer
 (
-{
-}
 )
 ;
-fragment
+assert_throws_js
+(
+TypeError
+_
 =
+>
 s
 .
 sanitize
 (
 null
 )
-;
-assert_true
-(
-fragment
-instanceof
-DocumentFragment
-)
-;
-assert_equals
-(
-getString
-(
-fragment
-)
-"
-null
-"
 )
 ;
 }
 "
-SanitizerAPI
+Sanitizer
+.
 sanitize
-function
-for
+(
 null
+)
 .
 "
 )
