Bug 1718778 [wpt PR 29543] - PrePaint: LayoutObject traversal with LayoutNG fragment lookups., a=testonly
Automatic update from web-platform-tests
PrePaint: LayoutObject traversal with LayoutNG fragment lookups.

Almost completely move away from fragment traversal in pre-paint.
Instead do LayoutObject traversal accompanied by a corresponding
NGPhysicalBoxFragment when possible. This means that we'll keep track of
the fragment of the parent LayoutObject at any given time, and, when
entering a child LayoutObject, we'll search that fragment for a child
fragment (or child fragment item) representing a child LayoutObject.
If we don't find the child, it means that it doesn't exist in the
current fragmentainer.

One piece of complexity here is out-of-flow positioned elements. Since
we're traversing the LayoutObject tree, and keep track of the fragment
of the parent LayoutObject, for OOFs, we also need to keep track of the
ancestor fragments that may contain absolutely or fixed positioned
descendants, and search them, rather than the parent fragment, when
looking for OOFs. We also need to make paint offset adjustments when
entering OOFs, since OOFs are direct children of a fragmentainer, rather
than a child of their actual containing block.

There are still a few cases where it's just too hard to avoid fragment
traversal, though:

1. OOF fragments with missing containing block fragments. This happens
when an OOF inside block fragmentation overflows its actual containing
block, and occurs in fragmentainers where the containing block doesn't
occur.

2. Fragmented floats inside inline formatting contexts, when the float
occurs in fragmentainers where some of its ancestors don't.

3. Column spanners are always entered directly from the ancestor
multicol container.

When we fall back to fragment traversal like this, we'll also miss any
paint effects that should be caused by the missing ancestors. The new
test external/wpt/css/css-break/transform-009.html is failing because of
th

--- a/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-035.html
+++ b/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-035.html
@@ -120,7 +120,14 @@ margin
 left
 :
 -
-200px
+250px
+;
+margin
+-
+top
+:
+-
+50px
 ;
 }
 .
@@ -232,9 +239,10 @@ style
 "
 transform
 :
-translateX
+translate
 (
-0
+50px
+50px
 )
 ;
 "
