Bug 1719635 [wpt PR 29608] - [COEP] Always allow anonymous iframes to load, a=testonly
Automatic update from web-platform-tests
[COEP] Always allow anonymous iframes to load

This CL is a step of the anonymous iframe implementation. Anonymous
iframes are always allowed to load, regardless of their parent Cross
Origin Embedder Policy.

Note that anonymous iframes are implemented behind the blink runtime
feature AnonymousIframe, which is disabled by default. All the code
introduced by this CL does not do anything unless that feature flag is
enabled.

Bug: 1226469
Change-Id: Ia05c2ff6f1b869fa27571f9b529d89a5b64c4dd4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3009318
Commit-Queue: Antonio Sartori <antoniosartorichromium.org>
Reviewed-by: Camille Lamy <clamychromium.org>
Cr-Commit-Position: refs/heads/master{#901408}

--

wpt-commits: 6f7552921abb51b1bfafbce7cd5bd46ca7618d7a
wpt-pr: 29608

UltraBlame original commit: 78b09de6fdfc30c5550e3f9615b0399edecff48f

--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/resources/navigate-none.sub.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/resources/navigate-none.sub.html
@@ -109,6 +109,41 @@ BroadcastChannel
 channelName
 )
 ;
+/
+/
+Broadcast
+only
+once
+the
+DOM
+is
+loaded
+so
+that
+the
+caller
+can
+/
+/
+access
+reliably
+this
+document
+'
+s
+body
+.
+window
+.
+addEventListener
+(
+"
+DOMContentLoaded
+"
+(
+)
+=
+>
 bc
 .
 postMessage
@@ -116,6 +151,7 @@ postMessage
 "
 loaded
 "
+)
 )
 ;
 /
