Bug 1720385 [wpt PR 29653] - Initialize AudioData from BufferSource, a=testonly
Automatic update from web-platform-tests
Initialize AudioData from BufferSource

This CL updated AudioDataInit to use a BufferSource data member, instead
of an AudioBuffer member. It also moves fields found in the AudioBuffer
into the top level AudioDataInit.

This allows users to create AudioData in whichever format they want.

Bug: 1205281
Change-Id: If234ace2d64e79470f6561c9c0838643ec390f8e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3025311
Commit-Queue: Thomas Guilbert <tguilbertchromium.org>
Reviewed-by: Dan Sanders <sandersdchromium.org>
Cr-Commit-Position: refs/heads/master{#901720}

--

wpt-commits: 0dd9d64da423eec530273f40dc14f0a4b4256f89
wpt-pr: 29653

UltraBlame original commit: 4514b19b1dca31f050ec31ec98d049e4f0d22121

--- a/testing/web-platform/tests/mediacapture-insertable-streams/MediaStreamTrackGenerator-audio.https.html
+++ b/testing/web-platform/tests/mediacapture-insertable-streams/MediaStreamTrackGenerator-audio.https.html
@@ -175,29 +175,17 @@ sampleRate
 =
 30000
 ;
-const
-buffer
+let
+frames
 =
-new
-AudioBuffer
-(
-{
-length
-:
 sampleRate
 /
 10
-/
-/
-100ms
-numberOfChannels
-:
+;
+let
+channels
+=
 1
-sampleRate
-:
-sampleRate
-}
-)
 ;
 /
 /
@@ -211,14 +199,15 @@ we
 have
 something
 .
-const
-array
+let
+data
 =
-buffer
-.
-getChannelData
+new
+Float32Array
 (
-0
+frames
+*
+channels
 )
 ;
 const
@@ -239,7 +228,7 @@ i
 ;
 i
 <
-array
+data
 .
 length
 ;
@@ -267,7 +256,7 @@ PI
 2
 )
 ;
-array
+data
 [
 i
 ]
@@ -288,9 +277,23 @@ AudioData
 timestamp
 :
 timestamp
-buffer
+numberOfFrames
 :
-buffer
+frames
+numberOfChannels
+:
+channels
+sampleRate
+:
+sampleRate
+data
+:
+data
+format
+:
+"
+FLT
+"
 }
 )
 ;
