Bug 1720588 [wpt PR 29669] - [SPC] Enable SPC API V2 features., a=testonly
Automatic update from web-platform-tests
[SPC] Enable SPC API V2 features.

This patch enables SecurePaymentConfirmationAPIV2 flag by default in
M93. This flag controls a subset of features that are enabled by
SecurePaymentConfirmation flag, which is in origin trial between M91 and
M94. The changes in SecurePaymentConfirmationAPIV2 resulted from the
initial feedback from origin trial partners.

Blink-dev announcement:
https://groups.google.com/a/chromium.org/g/blink-dev/c/6Dd00NJ-td8/m/iXX4YilWEwAJ

Bug: 1210488
Change-Id: I80920c138b063b89682de2a5909bf88347bfd448
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3027027
Commit-Queue: Rouslan Solomakhin <rouslanchromium.org>
Reviewed-by: Matt Falkenhagen <falkenchromium.org>
Reviewed-by: Liquan (Max) Gu <maxlgchromium.org>
Cr-Commit-Position: refs/heads/master{#901845}

--

wpt-commits: 8e99531ef6ee1e3db50120b126bc07de682f1e0a
wpt-pr: 29669

UltraBlame original commit: 0db8ae67cd6a3946ad72a33cb46a871f66e0d173

--- a/testing/web-platform/tests/secure-payment-confirmation/secure-payment-confirmation.tentative.https.html
+++ b/testing/web-platform/tests/secure-payment-confirmation/secure-payment-confirmation.tentative.https.html
@@ -219,9 +219,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -312,9 +355,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -401,12 +487,55 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 /
 /
 Omitted
 timeout
 field
 .
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -501,9 +630,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 {
@@ -620,9 +792,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -721,9 +936,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -825,9 +1083,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -929,9 +1230,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1033,9 +1377,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1143,9 +1530,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1229,9 +1659,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1314,11 +1787,37 @@ charCodeAt
 /
 Omitted
 networkData
-field
+and
+challenge
+fields
 .
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1414,9 +1913,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1499,14 +2041,43 @@ charCodeAt
 /
 Null
 networkData
-field
+and
+challenge
+fields
 .
 networkData
+:
+null
+challenge
 :
 null
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1589,15 +2160,45 @@ charCodeAt
 /
 Empty
 networkData
-field
+and
+challenge
+fields
 .
 networkData
+:
+[
+]
+challenge
 :
 [
 ]
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1695,6 +2296,25 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 /
 /
 Timeout
@@ -1712,6 +2332,30 @@ timeout
 60
 +
 1
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1824,9 +2468,52 @@ charCodeAt
 0
 )
 )
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1909,9 +2596,37 @@ charCodeAt
 /
 Large
 networkData
-value
+and
+challenge
+values
 .
 networkData
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+.
+repeat
+(
+1024
+*
+1024
+)
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+challenge
 :
 Uint8Array
 .
@@ -1940,6 +2655,30 @@ charCodeAt
 timeout
 :
 60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
 }
 }
 ]
@@ -1956,6 +2695,408 @@ networkData
 value
 throws
 exception
+.
+'
+)
+;
+test
+(
+(
+)
+=
+>
+{
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+PaymentRequest
+(
+[
+{
+supportedMethods
+:
+'
+secure
+-
+payment
+-
+confirmation
+'
+data
+:
+{
+action
+:
+'
+authenticate
+'
+credentialIds
+:
+[
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+]
+networkData
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+timeout
+:
+60000
+/
+/
+Omitted
+instrument
+field
+.
+}
+}
+]
+details
+)
+;
+}
+)
+;
+}
+'
+Instrument
+field
+is
+required
+.
+'
+)
+;
+test
+(
+(
+)
+=
+>
+{
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+PaymentRequest
+(
+[
+{
+supportedMethods
+:
+'
+secure
+-
+payment
+-
+confirmation
+'
+data
+:
+{
+action
+:
+'
+authenticate
+'
+credentialIds
+:
+[
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+]
+networkData
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+timeout
+:
+60000
+instrument
+:
+{
+/
+/
+Ommitted
+instrument
+display
+name
+.
+icon
+:
+'
+https
+:
+/
+/
+example
+.
+test
+/
+icon
+.
+png
+'
+}
+}
+}
+]
+details
+)
+;
+}
+)
+;
+}
+'
+Instrument
+display
+name
+is
+required
+.
+'
+)
+;
+test
+(
+(
+)
+=
+>
+{
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+PaymentRequest
+(
+[
+{
+supportedMethods
+:
+'
+secure
+-
+payment
+-
+confirmation
+'
+data
+:
+{
+action
+:
+'
+authenticate
+'
+credentialIds
+:
+[
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+]
+networkData
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+challenge
+:
+Uint8Array
+.
+from
+(
+'
+x
+'
+c
+=
+>
+c
+.
+charCodeAt
+(
+0
+)
+)
+timeout
+:
+60000
+instrument
+:
+{
+displayName
+:
+'
+X
+'
+/
+/
+Ommitted
+instrument
+icon
+.
+}
+}
+}
+]
+details
+)
+;
+}
+)
+;
+}
+'
+Instrument
+icon
+is
+required
 .
 '
 )
