Bug 1718029 [wpt PR 29475] - Add WPT for COEP inheritance in local scheme popups, a=testonly
Automatic update from web-platform-tests
Add WPT for COEP inheritance in local scheme popups

This change adds a Web Platform Test checking inheritance of Cross
Origin Embedder Policy to local scheme popups.

Change-Id: I66b4122751622a7d3df7112741a9f86785446417
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2984561
Reviewed-by: Domenic Denicola <domenicchromium.org>
Commit-Queue: Antonio Sartori <antoniosartorichromium.org>
Cr-Commit-Position: refs/heads/master{#901853}

--

wpt-commits: f27bd064b94b35fb80dc389327b264bdbe11a7ae
wpt-pr: 29475

UltraBlame original commit: 2f464b21b0d08544fd7aefcf0a72f6ca4aba7c22

--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/resources/blob-url-factory.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/resources/blob-url-factory.html
@@ -57,9 +57,14 @@ variant
 "
 )
 ;
-const
+let
 parent
 =
+"
+parent
+"
+;
+if
 (
 variant
 =
@@ -69,17 +74,37 @@ variant
 subframe
 "
 )
-?
+{
+parent
+=
 "
 parent
 .
 parent
 "
-:
+;
+}
+else
+if
+(
+variant
+=
+=
+=
 "
+popup
+"
+)
+{
+parent
+=
+"
+opener
+.
 parent
 "
 ;
+}
 const
 blob
 =
@@ -171,6 +196,26 @@ body
 append
 (
 frame
+)
+;
+}
+else
+if
+(
+variant
+=
+=
+=
+"
+popup
+"
+)
+{
+window
+.
+open
+(
+blobURL
 )
 ;
 }
