--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/blob.https.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/blob.https.html
@@ -174,6 +174,9 @@ subframe
 "
 navigate
 "
+"
+popup
+"
 ]
 .
 forEach
@@ -287,7 +290,7 @@ message
 "
 t
 .
-step_func_done
+step_func
 (
 (
 {
@@ -351,6 +354,12 @@ did
 not
 fail
 "
+)
+;
+t
+.
+done
+(
 )
 ;
 }
