Bug 1720372 [wpt PR 29651] - [VirtualKeyboard] Add Secure Context to VK interface., a=testonly
Automatic update from web-platform-tests
[VirtualKeyboard] Add Secure Context to VK interface.

Added SecureContext to VK interface as we don't want to show/hide VK
when the document isn't the active document and hasn't been
authenticated. Some tests that used to run on insecure context were
changed to now use secure context instead. Using secure context also
led to removal of some tests where we were manually injecting VK
events to the browser. The embedded test server usage causes the
input method initialized in the RWHVA to use the real input method
instead of the mock implementation.
WPT tests in crrev.com/c/2993938 cover those cases.
Spec: https://github.com/w3c/editing/blob/gh-pages/docs/virtualkeyboard/index.html

Bug: 856269

Change-Id: Ie4fa4c50a08e8d439b985e62beea4d9aa57f3e26
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3003699
Reviewed-by: Kent Tamura <tkentchromium.org>
Reviewed-by: Keith Lee <keithleechromium.org>
Reviewed-by: Alexander Timin <altiminchromium.org>
Commit-Queue: Anupam Snigdha <snianumicrosoft.com>
Cr-Commit-Position: refs/heads/master{#901863}

--

wpt-commits: 35593dd1a0617be0adc6428fe0487b34398d28aa
wpt-pr: 29651

UltraBlame original commit: aab897b961fffb2e99726efe2dd4fc0d0b7a727a

--- a/testing/web-platform/tests/virtual-keyboard/virtual-keyboard-type.https.html
+++ b/testing/web-platform/tests/virtual-keyboard/virtual-keyboard-type.https.html
@@ -194,6 +194,64 @@ VirtualKeyboard
 "
 )
 ;
+test
+(
+function
+(
+)
+{
+assert_true
+(
+navigator
+.
+virtualKeyboard
+.
+show
+instanceof
+Function
+)
+;
+}
+"
+navigator
+.
+virtualKeyboard
+.
+show
+instanceof
+Function
+"
+)
+;
+test
+(
+function
+(
+)
+{
+assert_true
+(
+navigator
+.
+virtualKeyboard
+.
+hide
+instanceof
+Function
+)
+;
+}
+"
+navigator
+.
+virtualKeyboard
+.
+hide
+instanceof
+Function
+"
+)
+;
 addEventListener
 (
 "
