Bug 1720679 [wpt PR 29675] - Deflake popup-coop-by-sw-from-coop.https.html, a=testonly
Automatic update from web-platform-tests
Deflake popup-coop-by-sw-from-coop.https.html

Nobody has ever been able to reproduce the problem. It is apparently a
timeout. To fix this, the test is marked as "long" and every subtest are
run separately.

At best, this fixes the issue. At worst, this will give us useful
information: which subtest is the culprit.

Bug: 1151555
Change-Id: I4b62b1d6a96fed97458567b11d7301f60bf6fc77
Fixed: 1151555
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3030564
Commit-Queue: Arthur Sonzogni <arthursonzognichromium.org>
Reviewed-by: Antonio Sartori <antoniosartorichromium.org>
Cr-Commit-Position: refs/heads/master{#901959}

--

wpt-commits: c13cf37f470fb729335ac67d325de63669a1bf1a
wpt-pr: 29675

UltraBlame original commit: 4f55d470b85b9a425456df3d8a86182700851438

--- a/testing/web-platform/tests/html/cross-origin-opener-policy/popup-coop-by-sw-from-coop.https.html
+++ b/testing/web-platform/tests/html/cross-origin-opener-policy/popup-coop-by-sw-from-coop.https.html
@@ -1,9 +1,4 @@
 <
-!
-doctype
-html
->
-<
 html
 >
 <
@@ -40,6 +35,70 @@ content
 =
 "
 long
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+1
+-
+1
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+2
+-
+2
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+3
+-
+3
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+4
+-
+last
 "
 >
 <
@@ -85,6 +144,25 @@ src
 common
 /
 utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+common
+/
+subset
+-
+tests
 .
 js
 "
@@ -205,8 +283,9 @@ COOP
 COEP
 headers
 .
-popupCoopBySwTest
+subsetTest
 (
+popupCoopBySwTest
 "
 sw_normal
 popup_normal
@@ -215,8 +294,9 @@ sw_normal
 popup_normal
 swap_browsing_context_group
 )
-popupCoopBySwTest
+subsetTest
 (
+popupCoopBySwTest
 "
 sw_normal
 popup_coop
@@ -225,8 +305,9 @@ sw_normal
 popup_coop
 keep_browsing_context_group
 )
-popupCoopBySwTest
+subsetTest
 (
+popupCoopBySwTest
 "
 sw_coop
 popup_normal
@@ -235,8 +316,9 @@ sw_coop
 popup_normal
 swap_browsing_context_group
 )
-popupCoopBySwTest
+subsetTest
 (
+popupCoopBySwTest
 "
 sw_coop
 popup_coop
