--- a/testing/web-platform/tests/web-animations/timing-model/animations/playing-an-animation.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animations/playing-an-animation.html
@@ -1182,7 +1182,7 @@ pending
 '
 )
 ;
-assert_greater_than
+assert_time_greater_than_equal
 (
 animation
 .
@@ -1316,7 +1316,7 @@ pending
 '
 )
 ;
-assert_greater_than
+assert_time_greater_than_equal
 (
 animation
 .
